mobile complaint page

--- a/templates/mobindex.html
+++ b/templates/mobindex.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elegant Dashboard | Dashboard</title>
+  <title>WMS | Dashboard</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="{% static 'img/svg/logo.svg' %}" type="image/x-icon">
   <!-- Custom styles -->
@@ -26,7 +26,7 @@
             <span class="sr-only">Home</span>
             <span class="icon logo" aria-hidden="true"></span>
             <div class="logo-text">
-              <span class="logo-title">Elegant</span>
+              <span class="logo-title">WMS</span>
               <span class="logo-subtitle">Dashboard</span>
             </div>
 
@@ -46,19 +46,10 @@
                 <span class="icon document" aria-hidden="true"></span>Attendance
               </a>
             </li>
-            <li>
-              <a class="show-cat-btn" href="/workers">
-                <span class="icon user-3" aria-hidden="true"></span>Workers
-              </a>
-            </li>
-            <li>
-              <a class="show-cat-btn" href="/construction">
-                <span class="icon location" aria-hidden="true"></span>Construction Site
-              </a>
-            </li>
+            
             <li>
               <a class="show-cat-btn" href="/paysalary">
-                <span class="icon wallet" aria-hidden="true"></span>Pay Salary
+                <span class="icon wallet" aria-hidden="true"></span>Calculate Salary
               </a>
             </li>
 
@@ -134,11 +125,7 @@
           <ul class="sidebar-body-menu">
 
 
-            <li>
-              <a class=" " href="/empreg">
-                <span class="icon profile" aria-hidden="true"></span>Employee
-              </a>
-            </li>
+           
             <li>
               <a href="##"><span class="icon setting" aria-hidden="true"></span>Settings</a>
             </li>
@@ -771,13 +758,11 @@
       <footer class="footer">
         <div class="container footer--flex">
           <div class="footer-start">
-            <p>2021 © Elegant Dashboard - <a href="elegant-dashboard.com" target="_blank"
-                rel="noopener noreferrer">elegant-dashboard.com</a></p>
+            <p>Created by -Deepak Suthar | -Somya R Patra | - Vibhav Rane</p>
           </div>
           <ul class="footer-end">
             <li><a href="##">About</a></li>
-            <li><a href="##">Support</a></li>
-            <li><a href="##">Puchase</a></li>
+            <li><a href="##">Contact Us</a></li>
           </ul>
         </div>
       </footer>
