--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -206,8 +206,8 @@
               <h4>Salary per day : {{cs.spd}}/-</h4>
               <br><br>
               <h4>
-                From :
-                <input class="form-date-input" list="month" type="text" placeholder="Month" >
+                Salary : 
+                <input class="form-date-input" list="month" type="text" placeholder="Month" required>
                       <datalist id="month">
                           <option value="January">
                           <option value="February">
@@ -222,7 +222,7 @@
                           <option value="November">
                           <option value="December">
                       </datalist>
-                      <input class="form-date-input" list="year" type="text" placeholder="Year" >
+                      <input class="form-date-input" list="year" type="text" placeholder="Year" required>
                       <datalist id="year">
                           <option value="2021">
                           <option value="2022">
@@ -231,31 +231,7 @@
                           <option value="2025">
                           <option value="2026">
                       </datalist>
-                To : 
-                <input class="form-date-input" list="month" type="text" placeholder="Month" >
-                      <datalist id="month">
-                          <option value="January">
-                          <option value="February">
-                          <option value="March">
-                          <option value="April">
-                          <option value="May">
-                          <option value="June">
-                          <option value="July">
-                          <option value="August">
-                          <option value="September">
-                          <option value="October">
-                          <option value="November">
-                          <option value="December">
-                      </datalist>
-                      <input class="form-date-input" list="year" type="text" placeholder="Year" >
-                      <datalist id="year">
-                          <option value="2021">
-                          <option value="2022">
-                          <option value="2023">
-                          <option value="2024">
-                          <option value="2025">
-                          <option value="2026">
-                      </datalist>
+                
               </h4>
               <br><br>
               <h4>
