--- a/templates/construction.html
+++ b/templates/construction.html
@@ -245,10 +245,11 @@
           
         </div>
       </div>
-      <div class="popup" id="popup">
-        <h1 class="sign-up__title">Add New Construction Site</h1>            
-            <form class="sign-up-form form" action="" method="POST">
+      <!-- <div class="popup" id="popup"> -->
+                   
+            <form class="sign-up-form form popup" id="popup" action="" method="POST">
                 {% csrf_token %}
+                <h2 class="main-title">Add New Construction Site</h2> 
                 <label class="form-label-wrapper">
                     <p class="form-label">Site Name</p>
                     {{form.sname}}
@@ -290,7 +291,7 @@
                 <button class="button1-fix primary-default-btn transparent-btn" type="submit">Submit</button><br>
                 <button class="button1-fix primary-default-btn transparent-btn" onclick="toggle()">Cancel</button>
             </form>
-      </div>
+      <!-- </div> -->
     </main>
     <!-- ! Footer -->
     <footer class="footer">
