--- a/templates/site_profile.html
+++ b/templates/site_profile.html
@@ -261,78 +261,32 @@
           <article class="white-block">
             <h2 class="main-title">Filter</h2>
             <br>
-              <form>
-                <h3 class="filter-text">From :
-                  <br> 
-                  <input class="form-date-input" list="month" type="text" placeholder="Month" required>
-                      <datalist id="month">
-                          <option value="January">
-                          <option value="February">
-                          <option value="March">
-                          <option value="April">
-                          <option value="May">
-                          <option value="June">
-                          <option value="July">
-                          <option value="August">
-                          <option value="September">
-                          <option value="October">
-                          <option value="November">
-                          <option value="December">
-                      </datalist>
-                      <input class="form-date-input" list="year" type="text" placeholder="Year" required>
-                      <datalist id="year">
-                          <option value="2021">
-                          <option value="2022">
-                          <option value="2023">
-                          <option value="2024">
-                          <option value="2025">
-                          <option value="2026">
-                      </datalist>
-                  </h3>
-                  <h3 class="filter-text"> 
-                  To : 
-                  <br>
-                  <input class="form-date-input" list="month" type="text" placeholder="Month" required>
-                  <datalist id="month">
-                      <option value="January">
-                      <option value="February">
-                      <option value="March">
-                      <option value="April">
-                      <option value="May">
-                      <option value="June">
-                      <option value="July">
-                      <option value="August">
-                      <option value="September">
-                      <option value="October">
-                      <option value="November">
-                      <option value="December">
-                  </datalist>
-                  <input class="form-date-input" list="year" type="text" placeholder="Year" required>
-                  <datalist id="year">
-                      <option value="2021">
-                      <option value="2022">
-                      <option value="2023">
-                      <option value="2024">
-                      <option value="2025">
-                      <option value="2026">
-                  </datalist>
+            <form method="POST", id="fil">
+              {% csrf_token %}
+              <h3 class="filter-text">From :
+                <br> 
+                <input class="form-input" type="date" name="fromdt" id="fromdt" required>
+                    
                 </h3>
                 <h3 class="filter-text">
-                  Worker :
-                  <br>
-                  <input class="form-input" list="worker" type="text" placeholder="Enter Site name" required>
-                  <datalist id="worker">
-                      <option value="Harsh Tiwari">
-                      <option value="Ankit Yadav">
-                      <option value="Tanmay Shukla">
-                      <option value="Pratik Thakur">
-                      <option value="Niraj Gupta">
-                      <option value="Karan Yadav">
-                      <option value="Harsh Tiwari">
-                  </datalist>
-                </h3>
-                <button class="button1 primary-default-btn transparent-btn">Submit</button>
-              </form>
+                To : 
+                <br>
+                <input class="form-input" type="date" name="todt" id="todt" required>
+                
+              </h3>
+              <h3 class="filter-text">
+                Worker :
+                <br>
+                <input class="form-input" list="worker" type="text" name="st" id="st" placeholder="Enter Site name" required>
+                <datalist id="worker">
+                  {% for i in worker%}
+                    <option value ={{i.id}}>{{i.name}}</option>
+                  {% endfor %}
+                  <option value ='9999'>all</option>
+                </datalist>
+              </h3>
+              <button class="button1 primary-default-btn transparent-btn">Submit</button>
+            </form>
              
           </article>
 
