--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -222,8 +222,8 @@
                     
                     <td>
                       <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
-                        
+                        <!-- <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
+                         -->
                       </div>
                     </td>
                     <td>Harsh Tiwari</td>
@@ -238,8 +238,8 @@
                     
                     <td>
                       <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                      
+                        <!-- <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
+                       -->
                       </div>
                     </td>
                     <td>Ankit Yadav</td>
@@ -253,7 +253,7 @@
                     
                     <td>
                       <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
+                        <!-- <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture> -->
                       </div>
                     </td>
                     <td>Tanmay Shukla</td>
@@ -268,8 +268,8 @@
                     
                     <td>
                       <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
-                        
+                        <!-- <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
+                         -->
                       </div>
                     </td>
                     <td>Pratik Thakur</td>
@@ -284,8 +284,8 @@
                     
                     <td>
                       <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                        
+                        <!-- <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
+                         -->
                       </div>
                     </td>
                     <td>Niraj Gupta</td>
@@ -299,8 +299,8 @@
                     
                     <td>
                       <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                        
+                        <!-- <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
+                         -->
                       </div>
                     </td>
                     <td>Karan Yadav</td>
